ingress-nginx-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - nginx.k8s.sikademo.com
        - apache.k8s.sikademo.com
      secretName: tls-webservers-stagging
  rules:
    - host: nginx.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: apache.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
